lab3/src/ExprParser.java
// Generated from java-escape by ANTLR 4.11.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ExprParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NLINE=1, DEF=2, MAIN=3, LROUND=4, RROUND=5, LBR=6, RBR=7, COL=8, PRINT=9, 
		SEMICOL=10, AND=11, OR=12, OP=13, BOOLOP=14, EQ=15, WHILE=16, IF=17, STR=18, 
		CONTINUE=19, BREAK=20, ELSE=21, BOOL=22, NUM=23, NAME=24, WS=25;
	public static final int
		RULE_s = 0, RULE_main = 1, RULE_nlines = 2, RULE_expr = 3, RULE_predicate = 4, 
		RULE_whileBody = 5, RULE_ifBody = 6, RULE_elseBody = 7, RULE_assign = 8, 
		RULE_opBool = 9, RULE_opBoolT = 10, RULE_bool = 11, RULE_op = 12, RULE_opT = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"s", "main", "nlines", "expr", "predicate", "whileBody", "ifBody", "elseBody", 
			"assign", "opBool", "opBoolT", "bool", "op", "opT"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'\\n'", "'def'", "'main():'", "'('", "')'", "'{'", "'}'", "':'", 
			"'print'", "';'", "'and'", "'or'", null, null, "'='", "'while'", "'if'", 
			null, "'continue'", "'break'", "'else'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "NLINE", "DEF", "MAIN", "LROUND", "RROUND", "LBR", "RBR", "COL", 
			"PRINT", "SEMICOL", "AND", "OR", "OP", "BOOLOP", "EQ", "WHILE", "IF", 
			"STR", "CONTINUE", "BREAK", "ELSE", "BOOL", "NUM", "NAME", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExprParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SContext extends ParserRuleContext {
		public String res;
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ExprParser.EOF, 0); }
		public SContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_s; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterS(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitS(this);
		}
	}

	public final SContext s() throws RecognitionException {
		SContext _localctx = new SContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_s);

		    StringBuilder sb = new StringBuilder();
		    sb.append("#include <stdio.h> \n");

		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			main(sb);
			setState(29);
			match(EOF);
			}
			_ctx.stop = _input.LT(-1);

			    sb.append("}");
			    ((SContext)_localctx).res =  sb.toString();

		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MainContext extends ParserRuleContext {
		public StringBuilder sb;
		public String res;
		public ExprContext expr;
		public TerminalNode DEF() { return getToken(ExprParser.DEF, 0); }
		public TerminalNode MAIN() { return getToken(ExprParser.MAIN, 0); }
		public TerminalNode NLINE() { return getToken(ExprParser.NLINE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public MainContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public MainContext(ParserRuleContext parent, int invokingState, StringBuilder sb) {
			super(parent, invokingState);
			this.sb = sb;
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitMain(this);
		}
	}

	public final MainContext main(StringBuilder sb) throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState(), sb);
		enterRule(_localctx, 2, RULE_main);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(31);
			match(DEF);
			setState(32);
			match(MAIN);
			setState(33);
			match(NLINE);
			setState(34);
			((MainContext)_localctx).expr = expr(sb);

			        sb.append("int main()\n{ \n" + ((MainContext)_localctx).expr.res);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NlinesContext extends ParserRuleContext {
		public TerminalNode NLINE() { return getToken(ExprParser.NLINE, 0); }
		public NlinesContext nlines() {
			return getRuleContext(NlinesContext.class,0);
		}
		public NlinesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nlines; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterNlines(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitNlines(this);
		}
	}

	public final NlinesContext nlines() throws RecognitionException {
		NlinesContext _localctx = new NlinesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_nlines);
		try {
			setState(40);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NLINE:
				enterOuterAlt(_localctx, 1);
				{
				setState(37);
				match(NLINE);
				setState(38);
				nlines();
				}
				break;
			case EOF:
			case PRINT:
			case WHILE:
			case IF:
			case CONTINUE:
			case BREAK:
			case ELSE:
			case NAME:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprContext extends ParserRuleContext {
		public StringBuilder sb;
		public String res;
		public OpContext op;
		public ExprContext expr;
		public Token NAME;
		public PredicateContext predicate;
		public IfBodyContext ifBody;
		public TerminalNode PRINT() { return getToken(ExprParser.PRINT, 0); }
		public TerminalNode LROUND() { return getToken(ExprParser.LROUND, 0); }
		public OpContext op() {
			return getRuleContext(OpContext.class,0);
		}
		public TerminalNode RROUND() { return getToken(ExprParser.RROUND, 0); }
		public NlinesContext nlines() {
			return getRuleContext(NlinesContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode NAME() { return getToken(ExprParser.NAME, 0); }
		public TerminalNode EQ() { return getToken(ExprParser.EQ, 0); }
		public TerminalNode WHILE() { return getToken(ExprParser.WHILE, 0); }
		public PredicateContext predicate() {
			return getRuleContext(PredicateContext.class,0);
		}
		public TerminalNode COL() { return getToken(ExprParser.COL, 0); }
		public WhileBodyContext whileBody() {
			return getRuleContext(WhileBodyContext.class,0);
		}
		public TerminalNode IF() { return getToken(ExprParser.IF, 0); }
		public IfBodyContext ifBody() {
			return getRuleContext(IfBodyContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ExprContext(ParserRuleContext parent, int invokingState, StringBuilder sb) {
			super(parent, invokingState);
			this.sb = sb;
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr(StringBuilder sb) throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState(), sb);
		enterRule(_localctx, 6, RULE_expr);

		        ArrayList<String> types = new ArrayList<String>;
		    
		try {
			setState(78);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(42);
				match(PRINT);
				setState(43);
				match(LROUND);
				setState(44);
				((ExprContext)_localctx).op = op(sb);
				setState(45);
				match(RROUND);
				setState(46);
				nlines();
				setState(47);
				((ExprContext)_localctx).expr = expr(sb);

				        ((ExprContext)_localctx).res =  "printf(";
				        for (int i = 0; i < types.size(); i++){
				            _localctx.res += types.get(i);a
				        }
				        _localctx.res += ((ExprContext)_localctx).op.res;
				        _localctx.res += ");\n";
				        _localctx.res += ((ExprContext)_localctx).expr.res;
				     
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(50);
				((ExprContext)_localctx).NAME = match(NAME);
				setState(51);
				match(EQ);
				setState(52);
				((ExprContext)_localctx).op = op(sb);
				setState(53);
				nlines();
				setState(54);
				((ExprContext)_localctx).expr = expr(sb);
				((ExprContext)_localctx).res =  (((ExprContext)_localctx).NAME!=null?((ExprContext)_localctx).NAME.getText():null) + "=" + ((ExprContext)_localctx).op.res + ";\n" + ((ExprContext)_localctx).expr.res;
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(57);
				match(WHILE);
				setState(58);
				match(LROUND);
				setState(59);
				((ExprContext)_localctx).predicate = predicate(sb);
				setState(60);
				match(RROUND);
				setState(61);
				match(COL);
				setState(62);
				nlines();
				setState(63);
				whileBody(sb);
				setState(64);
				expr(sb);

				                    ((ExprContext)_localctx).res =  "while";
				                    _localctx.res += "(";
				                    _localctx.res += ((ExprContext)_localctx).predicate.res;
				                    _localctx.res += ")";
				                    _localctx.res += ":";
				                    _localctx.res += "\n";
				                
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(67);
				match(IF);
				setState(68);
				match(LROUND);
				setState(69);
				((ExprContext)_localctx).predicate = predicate(sb);
				setState(70);
				match(RROUND);
				setState(71);
				match(COL);
				setState(72);
				nlines();
				setState(73);
				((ExprContext)_localctx).ifBody = ifBody(sb);
				setState(74);
				expr(sb);

				               ((ExprContext)_localctx).res =  "if";
				               _localctx.res += "(";
				               _localctx.res += ((ExprContext)_localctx).predicate.res;
				               _localctx.res += ")";
				               _localctx.res += " {\n";
				               _localctx.res += "\n";
				               _localctx.res += ((ExprContext)_localctx).ifBody.res;

				               _localctx.res += "}\n";
				            
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				((ExprContext)_localctx).res =  "";
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PredicateContext extends ParserRuleContext {
		public StringBuilder sb;
		public String res;
		public OpBoolContext opBool;
		public OpBoolContext opBool() {
			return getRuleContext(OpBoolContext.class,0);
		}
		public PredicateContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public PredicateContext(ParserRuleContext parent, int invokingState, StringBuilder sb) {
			super(parent, invokingState);
			this.sb = sb;
		}
		@Override public int getRuleIndex() { return RULE_predicate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterPredicate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitPredicate(this);
		}
	}

	public final PredicateContext predicate(StringBuilder sb) throws RecognitionException {
		PredicateContext _localctx = new PredicateContext(_ctx, getState(), sb);
		enterRule(_localctx, 8, RULE_predicate);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			((PredicateContext)_localctx).opBool = opBool(sb);
			((PredicateContext)_localctx).res =  ((PredicateContext)_localctx).opBool.res;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WhileBodyContext extends ParserRuleContext {
		public StringBuilder sb;
		public String res;
		public ExprContext expr;
		public Token BREAK;
		public Token CONTINUE;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode BREAK() { return getToken(ExprParser.BREAK, 0); }
		public TerminalNode CONTINUE() { return getToken(ExprParser.CONTINUE, 0); }
		public WhileBodyContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public WhileBodyContext(ParserRuleContext parent, int invokingState, StringBuilder sb) {
			super(parent, invokingState);
			this.sb = sb;
		}
		@Override public int getRuleIndex() { return RULE_whileBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterWhileBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitWhileBody(this);
		}
	}

	public final WhileBodyContext whileBody(StringBuilder sb) throws RecognitionException {
		WhileBodyContext _localctx = new WhileBodyContext(_ctx, getState(), sb);
		enterRule(_localctx, 10, RULE_whileBody);
		try {
			setState(90);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EOF:
			case PRINT:
			case WHILE:
			case IF:
			case NAME:
				enterOuterAlt(_localctx, 1);
				{
				setState(83);
				((WhileBodyContext)_localctx).expr = expr(sb);
				((WhileBodyContext)_localctx).res =  ((WhileBodyContext)_localctx).expr.res;
				}
				break;
			case BREAK:
				enterOuterAlt(_localctx, 2);
				{
				setState(86);
				((WhileBodyContext)_localctx).BREAK = match(BREAK);
				((WhileBodyContext)_localctx).res =  (((WhileBodyContext)_localctx).BREAK!=null?((WhileBodyContext)_localctx).BREAK.getText():null);
				}
				break;
			case CONTINUE:
				enterOuterAlt(_localctx, 3);
				{
				setState(88);
				((WhileBodyContext)_localctx).CONTINUE = match(CONTINUE);
				((WhileBodyContext)_localctx).res =  (((WhileBodyContext)_localctx).CONTINUE!=null?((WhileBodyContext)_localctx).CONTINUE.getText():null);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfBodyContext extends ParserRuleContext {
		public StringBuilder sb;
		public String res;
		public ExprContext expr;
		public ElseBodyContext elseBody;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode BREAK() { return getToken(ExprParser.BREAK, 0); }
		public TerminalNode ELSE() { return getToken(ExprParser.ELSE, 0); }
		public ElseBodyContext elseBody() {
			return getRuleContext(ElseBodyContext.class,0);
		}
		public IfBodyContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public IfBodyContext(ParserRuleContext parent, int invokingState, StringBuilder sb) {
			super(parent, invokingState);
			this.sb = sb;
		}
		@Override public int getRuleIndex() { return RULE_ifBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterIfBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitIfBody(this);
		}
	}

	public final IfBodyContext ifBody(StringBuilder sb) throws RecognitionException {
		IfBodyContext _localctx = new IfBodyContext(_ctx, getState(), sb);
		enterRule(_localctx, 12, RULE_ifBody);
		try {
			setState(101);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EOF:
			case PRINT:
			case WHILE:
			case IF:
			case NAME:
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				((IfBodyContext)_localctx).expr = expr(sb);
				((IfBodyContext)_localctx).res =  ((IfBodyContext)_localctx).expr.res;
				}
				break;
			case BREAK:
				enterOuterAlt(_localctx, 2);
				{
				setState(95);
				match(BREAK);
				((IfBodyContext)_localctx).res =  "break\n";
				}
				break;
			case ELSE:
				enterOuterAlt(_localctx, 3);
				{
				setState(97);
				match(ELSE);
				setState(98);
				((IfBodyContext)_localctx).elseBody = elseBody(sb);
				((IfBodyContext)_localctx).res =  "{\n ((IfBodyContext)_localctx).elseBody.res + }\n";
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElseBodyContext extends ParserRuleContext {
		public StringBuilder sb;
		public String res;
		public ExprContext expr;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode BREAK() { return getToken(ExprParser.BREAK, 0); }
		public ElseBodyContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ElseBodyContext(ParserRuleContext parent, int invokingState, StringBuilder sb) {
			super(parent, invokingState);
			this.sb = sb;
		}
		@Override public int getRuleIndex() { return RULE_elseBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterElseBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitElseBody(this);
		}
	}

	public final ElseBodyContext elseBody(StringBuilder sb) throws RecognitionException {
		ElseBodyContext _localctx = new ElseBodyContext(_ctx, getState(), sb);
		enterRule(_localctx, 14, RULE_elseBody);
		try {
			setState(108);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EOF:
			case PRINT:
			case WHILE:
			case IF:
			case NAME:
				enterOuterAlt(_localctx, 1);
				{
				setState(103);
				((ElseBodyContext)_localctx).expr = expr(sb);
				((ElseBodyContext)_localctx).res =  ((ElseBodyContext)_localctx).expr.res;
				}
				break;
			case BREAK:
				enterOuterAlt(_localctx, 2);
				{
				setState(106);
				match(BREAK);
				((ElseBodyContext)_localctx).res =  "break\n";
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignContext extends ParserRuleContext {
		public StringBuilder sb;
		public String res;
		public Token NAME;
		public TerminalNode NAME() { return getToken(ExprParser.NAME, 0); }
		public TerminalNode EQ() { return getToken(ExprParser.EQ, 0); }
		public OpContext op() {
			return getRuleContext(OpContext.class,0);
		}
		public AssignContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public AssignContext(ParserRuleContext parent, int invokingState, StringBuilder sb) {
			super(parent, invokingState);
			this.sb = sb;
		}
		@Override public int getRuleIndex() { return RULE_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitAssign(this);
		}
	}

	public final AssignContext assign(StringBuilder sb) throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState(), sb);
		enterRule(_localctx, 16, RULE_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			((AssignContext)_localctx).NAME = match(NAME);
			setState(111);
			match(EQ);
			setState(112);
			op(sb);

			        ((AssignContext)_localctx).res =  (((AssignContext)_localctx).NAME!=null?((AssignContext)_localctx).NAME.getText():null) + " = ";
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OpBoolContext extends ParserRuleContext {
		public StringBuilder sb;
		public String res;
		public BoolContext bool;
		public OpBoolTContext opBoolT;
		public BoolContext bool() {
			return getRuleContext(BoolContext.class,0);
		}
		public OpBoolTContext opBoolT() {
			return getRuleContext(OpBoolTContext.class,0);
		}
		public OpBoolContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public OpBoolContext(ParserRuleContext parent, int invokingState, StringBuilder sb) {
			super(parent, invokingState);
			this.sb = sb;
		}
		@Override public int getRuleIndex() { return RULE_opBool; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterOpBool(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitOpBool(this);
		}
	}

	public final OpBoolContext opBool(StringBuilder sb) throws RecognitionException {
		OpBoolContext _localctx = new OpBoolContext(_ctx, getState(), sb);
		enterRule(_localctx, 18, RULE_opBool);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			((OpBoolContext)_localctx).bool = bool(sb);
			setState(116);
			((OpBoolContext)_localctx).opBoolT = opBoolT(sb);
			((OpBoolContext)_localctx).res =  ((OpBoolContext)_localctx).bool.res + ((OpBoolContext)_localctx).opBoolT.res;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OpBoolTContext extends ParserRuleContext {
		public StringBuilder sb;
		public String res;
		public OpBoolContext opBool;
		public TerminalNode AND() { return getToken(ExprParser.AND, 0); }
		public OpBoolContext opBool() {
			return getRuleContext(OpBoolContext.class,0);
		}
		public TerminalNode OR() { return getToken(ExprParser.OR, 0); }
		public OpBoolTContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public OpBoolTContext(ParserRuleContext parent, int invokingState, StringBuilder sb) {
			super(parent, invokingState);
			this.sb = sb;
		}
		@Override public int getRuleIndex() { return RULE_opBoolT; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterOpBoolT(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitOpBoolT(this);
		}
	}

	public final OpBoolTContext opBoolT(StringBuilder sb) throws RecognitionException {
		OpBoolTContext _localctx = new OpBoolTContext(_ctx, getState(), sb);
		enterRule(_localctx, 20, RULE_opBoolT);
		try {
			setState(128);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case AND:
				enterOuterAlt(_localctx, 1);
				{
				setState(119);
				match(AND);
				setState(120);
				((OpBoolTContext)_localctx).opBool = opBool(sb);
				((OpBoolTContext)_localctx).res =  " && " + ((OpBoolTContext)_localctx).opBool.res;
				}
				break;
			case OR:
				enterOuterAlt(_localctx, 2);
				{
				setState(123);
				match(OR);
				setState(124);
				((OpBoolTContext)_localctx).opBool = opBool(sb);
				((OpBoolTContext)_localctx).res =  " || " + ((OpBoolTContext)_localctx).opBool.res;
				}
				break;
			case RROUND:
				enterOuterAlt(_localctx, 3);
				{
				((OpBoolTContext)_localctx).res =  "";
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
